--- a/LCTMoodle/Views/NguoiDung/ChiTietTinNhan.cshtml
+++ b/LCTMoodle/Views/NguoiDung/ChiTietTinNhan.cshtml
@@ -35,6 +35,7 @@
                                 <article class="input">
                                     <textarea name="NoiDung" id="noi_dung" data-mac-dinh=""></textarea>
                                     <input type="hidden" name="MaNguoiNhan" value="@maNguoiNhan" />
+                                    <input type="hidden" name="MaNguoiGui" value="@Session["NguoiDung"]" />
                                 </article>
                             </section>
                         </li>
