--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -663,7 +663,7 @@ body.khong-scroll > .khung {
             width: 100%;
             bottom: 0;
             left: 0;
-            opacity: 0;
+            opacity: .2;
             transition: 0.5s;
             background-color: #000;
             text-align: right;
