--- a/LCTMoodle/Views/BaiVietTaiLieu/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietTaiLieu/_Form.cshtml
@@ -28,9 +28,9 @@
             <li data-an>
                 <section class="noi-dung">
                     <article class="input">
-                        <input type="file" name="MaTapTin"
+                        <input type="file" name="MaTapTin" data-dung-luong="10240"
                                @if (Model != null && Model.tapTin != null) {   @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BaiVietTaiLieu_TapTin"
-                                                              } />
+                                                                                             } />
 
                     </article>
                 </section>
