--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -75,10 +75,11 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input 
-                                @if (Model != null && Model.hinhDaiDien != null) { 
-                                    @: data-ma-mac-dinh="@Model.hinhDaiDien.ma" data-loai-mac-dinh="KhoaHoc_HinhDaiDien"
-                                } data-validate="bat-buoc" type="file" name="MaHinhDaiDien" />
+                            <input data-dung-luong="5120" data-duoi="jpeg jpg png"
+                                   @if (Model != null && Model.hinhDaiDien != null) {  @: data-ma-mac-dinh="@Model.hinhDaiDien.ma" data-loai-mac-dinh="KhoaHoc_HinhDaiDien"
+                                                                   } data-validate="bat-buoc" type="file" name="MaHinhDaiDien" />
+
+
 
                         </article>
                     </section>
