--- a/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
@@ -68,7 +68,7 @@
 {
     <article class="hop">
         <section class="tieu-de">
-            Danh sách người dùng đăng ký
+            Danh sách người dùng đăng ký (@danhSachDangKy.Count)
         </section>
         <section class="noi-dung khung-nguoi-dung">
             <ul id="danh_sach_dang_ky" class="danh-sach">
@@ -96,7 +96,7 @@
 {
     <article class="hop">
         <section class="tieu-de">
-            Danh sách thành viên
+            Danh sách thành viên (@danhSachThanhVien.Count)
         </section>
         <section class="noi-dung khung-nguoi-dung">
             <ul id="danh_sach_thanh_vien" class="danh-sach">
@@ -143,7 +143,7 @@
 {
     <article class="hop">
         <section class="tieu-de">
-            Danh sách người dùng bị chặn
+            Danh sách người dùng bị chặn (@danhSachBiChan.Count)
         </section>
         <section class="noi-dung khung-nguoi-dung">
             <ul id="danh_sach_bi_chan" class="danh-sach">
