--- a/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThongTin.cshtml
@@ -133,6 +133,10 @@
 <section class="hop hop-1-vien">
     <section class="tieu-de">Thông tin</section>
     <section class="noi-dung khung-duoi">
+        <article class="dong-noi-dung">
+            <section class="tieu-de">Số lượng thành viên</section>
+            <section class="noi-dung">@Model.soLuongThanhVien</section>
+        </article>
         @if (Model.chuDe != null)
         {
             <article class="dong-noi-dung">
