--- a/LCTMoodle/Views/KhoaHoc/_Item.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/_Item.cshtml
@@ -25,6 +25,9 @@
                     }
                 }
             </section>
+            <section class="sl-thanh-vien">
+                @Model.soLuongThanhVien
+            </section>
             <section class="mo-ta">
                 @Model.moTa
             </section>
