--- a/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
@@ -105,7 +105,7 @@
                 <li data-doi-tuong="tap-tin" style="width: 100%; margin: 0;">
                     <section class="noi-dung">
                         <article class="input">
-                            <input name="MaTapTin" data-validate="bat-buoc" type="file" />
+                            <input data-dung-luong="10240" name="MaTapTin" data-validate="bat-buoc" type="file" />
                         </article>
                     </section>
                 </li>   
@@ -115,7 +115,7 @@
                 <li data-doi-tuong="tap-tin" style="width: 100%; margin: 0;">
                     <section class="noi-dung">
                         <article class="input">
-                            <input name="MaTapTin" data-validate="bat-buoc" type="file" />
+                            <input data-dung-luong="10240" name="MaTapTin" data-validate="bat-buoc" type="file" />
                         </article>
                     </section>
                 </li>   
