--- a/LCTMoodle/Views/BaiVietBaiGiang/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Form.cshtml
@@ -35,11 +35,11 @@
             <li data-an>
                 <section class="noi-dung">
                     <article class="input">
-                        <input type="file" name="MaTapTin"
-                               @if (Model != null && Model.tapTin != null) 
-                               {  
-                                   @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BaiVietBaiGiang_TapTin"
-                               } />
+                        <input type="file" name="MaTapTin" data-dung-luong="10240"
+                               @if (Model != null && Model.tapTin != null) {   @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BaiVietBaiGiang_TapTin"
+                                                              } />
+
+
 
                     </article>
                 </section>
