--- a/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
@@ -20,11 +20,11 @@
         <li style="margin: 0; min-width: 34px; max-width: 34px;">
             <article class="noi-dung">
                 <article class="input" style="border-left: 0;">
-                    <input 
-                            @if (Model != null && Model.tapTin != null) 
-                            {    
-                                @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BinhLuanBaiVietDienDan_TapTin"
-                            } type="file" name="MaTapTin" />
+                    <input type="file" name="MaTapTin" data-dung-luong="10240"
+                           @if (Model != null && Model.tapTin != null) {     @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BinhLuanBaiVietDienDan_TapTin"
+                                                                                                             } />
+
+
 
                 </article>
             </article>
