--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -127,52 +127,56 @@
 
 <!--#endregion-->
 
-<!--#region Thông tin khóa học -->
+<!--#region Chiêu -->
 
-@if (coQuyenXemKhoaHoc)
-{
-    <section class="hop hop-1-vien">
-        <section class="tieu-de">Thông tin khóa học</section>
-        <section id="khung_chon_hien_thi" class="khung-chon-hien-thi">
-            <ul>
-                <li class="nhiem-vu-moi active">
-                    <a class="clicked" data-chuc-nang="hien-thi" data-value="nhiemvumoi">
-                        <i></i>
-                        <span>Nhiệm vụ mới</span>
-                    </a>
-                </li>
-                <li class="bai-giang-moi">
-                    <a data-chuc-nang="hien-thi" data-value="baigiangmoi">
-                        <i></i>
-                        <span>Bài giảng mới</span>
-                    </a>
-                </li>
-                <li class="bai-tap-moi">
-                    <a data-chuc-nang="hien-thi" data-value="baitapmoi">
-                        <i></i>
-                        <span>Bài tập mới</span>
-                    </a>
-                </li>
-            </ul>
-        </section>
+    <!--#region Thông tin khóa học -->
+
+    @if (coQuyenXemKhoaHoc)
+    {
+        <section class="hop hop-1-vien">
+            <section class="tieu-de">Thông tin khóa học</section>
+            <section id="khung_chon_hien_thi" class="khung-chon-hien-thi">
+                <ul>
+                    <li class="nhiem-vu-moi active">
+                        <a class="clicked" data-chuc-nang="hien-thi" data-value="nhiemvumoi">
+                            <i></i>
+                            <span>Nhiệm vụ mới</span>
+                        </a>
+                    </li>
+                    <li class="bai-giang-moi">
+                        <a data-chuc-nang="hien-thi" data-value="baigiangmoi">
+                            <i></i>
+                            <span>Bài giảng mới</span>
+                        </a>
+                    </li>
+                    <li class="bai-tap-moi">
+                        <a data-chuc-nang="hien-thi" data-value="baitapmoi">
+                            <i></i>
+                            <span>Bài tập mới</span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
     
-        <section id="khung_hien_thi" class="khung-hien-thi">
+            <section id="khung_hien_thi" class="khung-hien-thi">
 
-            <div id="nhiemvumoi" class="noi-dung active">           
-                <p class="empty">Chưa có nhiệm vụ mới</p>       
-            </div>
+                <div id="nhiemvumoi" class="noi-dung active">           
+                    <p class="empty">Chưa có nhiệm vụ mới</p>       
+                </div>
 
-            <div id="baigiangmoi" class="noi-dung">
-                <p class="empty">Chưa có bài giảng mới</p>
-            </div>
+                <div id="baigiangmoi" class="noi-dung">
+                    <p class="empty">Chưa có bài giảng mới</p>
+                </div>
 
-            <div id="baitapmoi" class="noi-dung">
-                <p class="empty">Chưa có bài tập mới</p>
-            </div>
+                <div id="baitapmoi" class="noi-dung">
+                    <p class="empty">Chưa có bài tập mới</p>
+                </div>
 
+            </section>
         </section>
-    </section>
-}
+    }
+
+    <!--#endregion-->
 
 <!--#endregion-->
 
