--- a/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
@@ -28,7 +28,7 @@
             <li data-an>
                 <section class="noi-dung">
                     <article class="input">
-                        <input type="file" name="MaTapTin" data-dung-luong="10240"
+                        <input type="file" name="MaTapTin" data-dung-luong="10485760"
                                @if (Model != null && Model.tapTin != null) {  @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BaiVietDienDan_TapTin"
                                                                                       } />
                     </article>
