--- a/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BinhLuanBaiVietDienDan/_Form.cshtml
@@ -20,12 +20,9 @@
         <li style="margin: 0; min-width: 34px; max-width: 34px;">
             <article class="noi-dung">
                 <article class="input" style="border-left: 0;">
-                    <input type="file" name="MaTapTin" data-dung-luong="10240"
+                    <input type="file" name="MaTapTin" data-dung-luong="10485760" data-an-hinh
                            @if (Model != null && Model.tapTin != null) {     @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BinhLuanBaiVietDienDan_TapTin"
                                                                                                              } />
-
-
-
                 </article>
             </article>
         </li>
