--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -46,7 +46,7 @@
                 </section>
                 <section class="noi-dung">
                     <article class="input">
-                        <input data-dung-luong="5120" data-duoi="jpeg jpg png"
+                        <input data-dung-luong="5242880" data-duoi="jpeg jpg png"
                                @if (Model != null && Model.hinhDaiDien != null) { @: data-ma-mac-dinh="@Model.hinhDaiDien.ma" data-loai-mac-dinh="ChuDe_HinhDaiDien"
                                                            } type="file" name="MaHinhDaiDien" />
 
