--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -438,7 +438,12 @@
     width: 20px;
     height: 20px;
     align-self: center;
+    margin-right: 5px;
 }
+
+    .lct-form .file-label input[type="file"][data-an-hinh] ~ img {
+        display: none !important;
+    }
 
 .lct-form .file-label i {
     font: normal 20px 'Stroke Icon';
