--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -119,7 +119,7 @@
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="file" name="MaHinhDaiDien" />
+                                    <input type="file" name="MaHinhDaiDien" data-duoi="jpg jpge png" data-dung-luong="512000" />
                                 </article>
                             </section>
                         </li>
