--- a/LCTMoodle/Views/NguoiDung/Sua.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Sua.cshtml
@@ -121,7 +121,7 @@
                                 </section>
                                 <section class="noi-dung">
                                     <article class="input">
-                                        <input type="file" name="MaHinhDaiDien" data-ma-mac-dinh="@(Model.hinhDaiDien != null ? Model.hinhDaiDien.ma : null)" data-loai-mac-dinh="@(Model.hinhDaiDien != null ? "NguoiDung_HinhDaiDien" : null)" />
+                                        <input type="file" name="MaHinhDaiDien" data-ma-mac-dinh="@(Model.hinhDaiDien != null ? Model.hinhDaiDien.ma : null)" data-loai-mac-dinh="@(Model.hinhDaiDien != null ? "NguoiDung_HinhDaiDien" : null)" data-dung-luong="5242880" data-duoi="png jpg jpge" />
                                     </article>
                                 </section>
                             </li>
