--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -232,11 +232,11 @@
         <section class="noi-dung">
             <section class="khung-tab">
                 <ul>
-                    <li class="active" data-hien-thi-tab="cau-hoi">
+                    <li class="active" data-hien-thi-tab="CH">
                         <i></i>
                         <span>Câu hỏi</span>
                     </li>
-                    <li data-hien-thi-tab="tra-loi">
+                    <li data-hien-thi-tab="TL">
                         <i></i>
                         <span>Trả lời</span>
                     </li>
