--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -52,7 +52,7 @@
     <section class="tieu-de">
         Danh sách bài viết
     </section>
-    <ul id="danh_sach_bai_viet" class="noi-dung">
+    <ul id="danh_sach_bai_viet" class="noi-dung danh-sach-bai-viet">
         @if (Model != null)
         {
             foreach (var baiViet in Model)
@@ -62,7 +62,8 @@
                     { "DSQuyen", dsQuyen },
                     { "LaThanhVien", laThanhVien }
                 })
-            }  
-        } 
+            }
+        }
     </ul>
+
 </section>
